DNDStyle.css
Body{
	background-color:#221307;
	background-image: url("./wood_1.jpg");
	color:#ffefd5;
	margin:0px;
}
* {
    box-sizing: border-box;

}
button{
	background-color: #3c2f28;
	border-color:#c6be3a;
	padding:2px;
	margin-left:5px;
	font-size:1em;
	border-radius: 1px;
	box-shadow: 0px 0px 5px #fff;
	color:#ffefd5;
}
table{
	border-color: transparent;
}
input{
	color:Black;
}
textarea{
	color:Black;
	background:#FFF8DC;
}
select option{
	color:Black;
}
select{
	color:Black;
	background:#FFF8DC;
}
h1{
	color:#ffefd5;
	
}
label{
	font-size:1.2em;
}
input,[type="text"],[type="checkbox"]:checked + label{
background:#FFF8DC;
 /* css 3 */
 border-radius:5px;
 /* mozilla */
 -moz-border-radius:5px;
 /* webkit */
 -webkit-border-radius:5px;
}

#add1_but,#add5_but,#add10_but{
	background-image:url(health_plus_button.png);
	background-repeat: no-repeat;
	background-color: transparent;
	background-size:100%;
	 width: 50px;
    height: 50px;
	border: none;
	box-shadow: none;

}
#remove_but{
	margin-top:20px;
	box-shadow: 0px 0px 15px #f0514e;
}


/* #order button:hover {background-color: #3e8e41
} */

#order button:active {
  transform: translateY(4px);
}

/* ripple effect */
 #order buton {
}
/*
#order button:after {
    content: "";
    background: #f1f1f1;
    display: block;
    position: absolute;
    padding-top: 300%;
    padding-left: 350%;
    margin-left: -20px !important;
    margin-top: -120%;
    opacity: 0;
    transition: all 0.8s
}

#order button:active:after {
    padding: 0;
    margin: 0;
    opacity: 1;
    transition: 0s
} */


#add-1_but,#add-5_but,#add-10_but{
	background-image:url(health_neg_button.png);
	background-repeat: no-repeat;
	background-color: transparent;
	border: none;
	background-size:100%;
	 width: 50px;
    height: 50px;
	box-shadow: none;

}
#remove_but{
	background-color: #3c2f28;
	border-color:#c6be3a;

}
#copy_but,#changeini_but,#change_name_but{
	background-color: #3c2f28;
	border-color:#c6be3a;
	height: 20px;
	font-size:0.7em;

}
#turn{
	width: 80px;
    height: 80px;
	border-radius: 15px;
}
.tooltipbutton{
	border: none;
	background-image:url(Information_button.png);
    background-repeat: no-repeat;
    background-color: transparent;
	background-size:100%;
	height:40px;
	width:40px;
	font-size:.8em;
	box-shadow:none;
}
.HeaderBox{
	position: relative;
    display: inline;
}
.pageheader{
	display:inline;
}
.tooltip{
	position: relative;
    display: inline;
	font-size:1.4em;
}
.tooltip .tooltiptext {
    visibility: hidden;
    width: 400px;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
 
    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 5;
}
.tooltip:hover .tooltiptext {
    visibility: visible;
}
.ctracker_buttons{
	max-width: 150px;
}
.ctracker_buttons button{
	max-width: 150px;
	margin:4px;
}
.doublelist{
	-webkit-column-count: 2; -webkit-column-gap:20px;
	-moz-column-count:2; -moz-column-gap:20px;
	-o-column-count:2; -o-column-gap:20px;
	column-count:2; column-gap:20px;\

}
.doublelist li{
	list-style-type:none;
}

#wrap {
   margin: 10px auto;        
   background: #666;
   padding: 10px;
   width: 100%;
}
#header {
   background-color: #666;
   color: #FFF;
      height:100%;
}
#logo {
   font-size: 30px;  
   line-height: 40px;    
   padding: 5px;
   background: #191919;
   width:100%;  
   position: fixed;   
   z-index:100;
   height:50px;
	  
}
#navWrap {
}
#nav {
<!-- margin = logo height -->
   height:100%;
   z-index:100; 
   position: fixed;
   margin-top: 50px;

}
#nav a{
	display: inline-block;
	padding: 0% 2.5%;}
	
#nav ul {
   margin: 0;
   padding: 0;    
}
#nav li {
   float: left;
   padding: 4px 4px;
   background-color: #333333;
   margin: 4px;
   color: #F00;
   list-style-type: none;
   border-style: outset;
   width: 100%
}
#nav li a {
   color: #ffffff;  
   text-decoration: none;  
	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	display:block;
	color: white;
	text-align: center;
	text-decoration: none;   
}
#nav li a:hover {  
}
#leftside{
	width:120px;
   height:100%;
}
.Left_Menu_spacer{
	width:120px;
	background: #191919;
	height:100%;
	display: block;
	position: fixed;    
	vertical-align: top;
	box-sizing:;
}
br.clearLeft {
   clear: left;        
}​
.Rectangle_1 {
  background-color: rgb(185, 180, 171);
  z-index: 3;
}

.modules_list,.main_content,.PH_ads,.navbar{
	border-style: transparent;
	background:#111111;
	background-color:rgba(17,17,17, 0.3);
	margin:auto;
	
/* 	border-width: 27px;
	-moz-border-image: url(Metal_Border_2.png) 27 repeat;
	-webkit-border-image: url(Metal_Border_2.png) 27 repeat;
	-o-border-image: url(Metal_Border_2.png) 27 repeat;
	border-image: url(Metal_Border_2.png) 27 fill repeat; */
}
.main_content{
	display: inline-block;
    position: relative;
	width: 80%;
	height: 100%;
	vertical-align: top;
}

.modules_list{
	display: inline-block;
    position: relative;
	width: 19%;
	height: 100%;
	vertical-align: top;
}
.Topbar{
	background:	#191919;
	width:100%;
	height:50px;
}
.modules_list,.main_content,.PH_ads{
	min-height: 1000px;
}


.body_content{
	box-sizing: border-box;
	min-height: 1000px;
	margin-left:120px;
	padding-top: 50px;

}
.body_box{
	position: relative;
    display: inline-block;
	vertical-align: top;
}
.body_border_box{
	position: relative;
    display: block;
	vertical-align: top;
	border-width: 2px;
	border-color: rgb(198, 190, 58);
	border-style: solid;
	border-radius: 10px;
	background-color: rgb(15, 7, 1);
	z-index: 4;
	
	Padding:4px;
	margin: auto;
	margin-top:4px;
	margin-bottom:4px;
}

li a:hover {
    background-color: #111;
}
tr.active{
    background-color: #372e20;
}
.navbar{
	margin:4px;
	margin-left:120px;
}

.navbarmenu{
	box-sizing: border-box;
    list-style-type: none;
    margin: 0px;
    padding: 0px 0px;
	margin: 0px 0px 16px 0%;
}
.navbarmenu ul{
	box-sizing: border-box;
	width: 50%;
	padding: 0px;
	margin: 0px 25%;
}
.navbarmenu li{
	display: inline;
	list-style-type:none;
}
.navbarmenu li a{
   box-sizing:border-box;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
	color: white;
	text-align: center;
	padding: 11px 0px;
	text-decoration: none;

}
.navbarmenu a{
	display: inline-block;
	width: 20%;
	padding: 0% 2.5%;
}

.Modulenavbarmenu{
	box-sizing: border-box;
    list-style-type: none;
    margin: 0px;
    padding: 0px 0px;
	margin: 0px 0px 0px 0%;
}
.Modulenavbarmenu ul{
	box-sizing: border-box;
	width: 99%;
	padding: 0px;
	margin: 1%;
}
.Modulenavbarmenu li{
	width: 100%;
	margin:  2% 0px;
	list-style-type:none;
	border-width: 5px;
	border-style: inset;
	border-color: black;
}
.Modulenavbarmenu li a{
	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	display:block;
	color: white;
	text-align: left;
	font-size: 25px;
	text-decoration: none;

}


.News_contentborder{
/*    	border-style: solid;
 border-color: #ff0000 ; */
	min-height: 20%;
	max-height: 23.5%;
	margin: 5px;
}
.News_contentobject{
	vertical-align: top;
	display: inline-block;
	height: 100%;
	max-width:49%;
	margin: 2px;

}
.News_botlinkbox{
	margin-left: 90%;
}
.News_Header{
	min-height: 5%;
}
.PH_ads{
	display: inline-block;
    position: relative;
	width: 10%;
	height: 100%;
	vertical-align: top;
}
.Print_preview{
	background-color: #fdf5e8;
	display: block;
	vertical-align: top;
	height: 297mm; 
	width: 200mm;
	padding: 0 0 0 7px;
	position: Relative;
	color:black;
	margin: auto;
	margin-top:4px;
	margin-bottom:4px;
}

.Card_preview{
	background-color: #fdf5e8;
	display: block;
	vertical-align: top;
	padding: 0 0 0 7px;
	position: Relative;
	color:black;
	margin: auto;
	margin-top:4px;
	margin-bottom:4px;
}

.sickdragonimg_ph{
	min-height: 200px;
}
.spaced{
margin: 5px 0px 0px 0px;	
}

